[Change Type] Setting up the template for working process [Date] February 21, 2017

--- a/style_sheets/template.tex
+++ b/style_sheets/template.tex
@@ -83,33 +83,12 @@
 \end{glossary}
 
 \mainmatter
-
-\chapter{Introduction}
-\section{\label{section:overview}Overview}
-   The classic approach to proving a theorem is some really difficult 
-   mathematics.  For the theory of relativity, I asked grandpa Al exactly 
-   how he proved it.  He gave me a few hints, including some stuff about
-   rest mass and big electro-motive force.  I think he is really smart.
-\section{Conclusions}
-   I conclude that this is a really short thesis.
-
-\chapter{Future Work}
-   I'm sure my future work will consist of lots of other famous stuff.
-
-\chapter*{Appendices}
-
-\addcontentsline{toc}{chapter}{Appendices}
- % Next lines duplicated from .toc file and used to create mini
- % "Appendix Table of Contents," if desired:
-   \contentsline {chapter}{\numberline {A}Proving $E=MC^2$}{4}
-   \contentsline {chapter}{\numberline {B}Derivation of $A = \pi r^2$}{5}
- % End mini table of contents
-
-\appendix
-\chapter{Proving $E=MC^2$}
-   I refer the reader to many of grandpa's famous books on this subject.
-\chapter{Derivation of $A = \pi r^2$}
-   A circle is really a square without corners.  QED.
+\include{Introduction}
+\include{Background}
+\include{Method}
+\include{Results}
+\include{Conclusion}
+\include{Appendicies}
 
 %\bibliographystyle{AMS}
 %\bibliography{bibfile_name}
