--- a/style_sheets/template.tex
+++ b/style_sheets/template.tex
@@ -10,6 +10,8 @@
                  % OR
 % Use the following specification for TOP page numbering:
 % \documentclass[fleqn]{unmeethesis}
+\usepackage{graphicx}
+\graphicspath{ {../Images/} }
 
 \begin{document}
 
