End of BackgroundStudy

--- a/style_sheets/template.tex
+++ b/style_sheets/template.tex
@@ -11,6 +11,9 @@
 % Use the following specification for TOP page numbering:
 % \documentclass[fleqn]{unmeethesis}
 \usepackage{graphicx}
+\usepackage{caption}
+\usepackage{algorithm}
+\usepackage{algpseudocode}
 \graphicspath{ {../Images/} }
 
 \begin{document}
