Method Upto Timeline

--- a/style_sheets/template.tex
+++ b/style_sheets/template.tex
@@ -14,6 +14,13 @@
 \usepackage{caption}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+\usepackage{hyperref}
+\hypersetup{
+	colorlinks=true,
+	linkcolor=black,
+	filecolor=magenta,      
+	urlcolor=blue,
+}
 \graphicspath{ {../Images/} }
 
 \begin{document}
